# MCP-Email-Verify

./: Dockerfile  README.md  pyproject.toml  server.py  smithery.yaml
